--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "thinair",
-    "description": "A very interesting project.",
+    "description": "Live Altitude",
     "slug": "thinair",
     "privacy": "public",
     "sdkVersion": "25.0.0",
