--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^25.0.0",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-pull-to-refresh": "^2.1.3",
     "react-native-root-toast": "^3.0.1",
     "react-navigation": "^1.0.0-beta.27"
   },
